<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>dev.bannmann.labs</groupId>
        <artifactId>labs-bom</artifactId>
        <version>0.40-SNAPSHOT</version>
    </parent>
    <artifactId>labs-parent</artifactId>
    <packaging>pom</packaging>

    <name>${project.groupId}:${project.artifactId}</name>

    <properties>
        <base.toolchains.jdk>17</base.toolchains.jdk>
        <error_prone.version>2.37.0</error_prone.version>
        <javadoc.sources.directory>${project.build.directory}/generated-sources/javadoc-input</javadoc.sources.directory>
        <jooq.version>3.18.31</jooq.version>
        <lombok.core.version>1.18.38</lombok.core.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <mockito-core.version>5.18.0</mockito-core.version>
        <nullaway.version>0.11.0</nullaway.version>
        <testng.version>7.11.0</testng.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>2.19.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.google.errorprone</groupId>
                <artifactId>error_prone_annotations</artifactId>
                <version>${error_prone.version}</version>
            </dependency>
            <dependency>
                <groupId>com.uber.nullaway</groupId>
                <artifactId>nullaway</artifactId>
                <version>${nullaway.version}</version>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>dev.bannmann.anansi</groupId>
                <artifactId>anansi</artifactId>
                <version>0.12</version>
            </dependency>
            <dependency>
                <groupId>jakarta.inject</groupId>
                <artifactId>jakarta.inject-api</artifactId>
                <version>1.0.3</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>jakarta.json</groupId>
                <artifactId>jakarta.json-api</artifactId>
                <version>2.1.3</version>
            </dependency>
            <dependency>
                <groupId>javax.json</groupId>
                <artifactId>javax.json-api</artifactId>
                <version>1.1.4</version>
            </dependency>
            <dependency>
                <groupId>net.jcip</groupId>
                <artifactId>jcip-annotations</artifactId>
                <version>1.0</version>
            </dependency>
            <dependency>
                <groupId>org.apiguardian</groupId>
                <artifactId>apiguardian-api</artifactId>
                <version>1.1.2</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.21.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.jooq</groupId>
                <artifactId>jooq-bom</artifactId>
                <version>${jooq.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jspecify</groupId>
                <artifactId>jspecify</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.kohsuke.metainf-services</groupId>
                <artifactId>metainf-services</artifactId>
                <version>1.11</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <configuration>
                        <sourcepath>${javadoc.sources.directory}</sourcepath>
                        <doclint>none</doclint>
                        <detectOfflineLinks>false</detectOfflineLinks>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release-profile</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>errorprone-and-nullaway</id>
                                    <goals>
                                        <goal>compile</goal>
                                    </goals>
                                    <phase>test</phase>
                                    <configuration>
                                        <failOnWarning>true</failOnWarning>
                                        <compilerArgs>
                                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                                            <arg>-XDcompilePolicy=simple</arg>
                                            <arg>--should-stop=ifError=FLOW</arg>
                                            <arg>-Xplugin:ErrorProne -XepExcludedPaths:.*/target/generated-sources/.* -Xep:MissingSummary:OFF -Xep:UnrecognisedJavadocTag:OFF -Xep:StringConcatToTextBlock:OFF -XepOpt:NullAway:JSpecifyMode -XepOpt:NullAway:AnnotatedPackages=dev.bannmann.labs</arg>
                                        </compilerArgs>
                                        <annotationProcessorPaths>
                                            <path>
                                                <groupId>org.projectlombok</groupId>
                                                <artifactId>lombok</artifactId>
                                                <version>${lombok.core.version}</version>
                                            </path>
                                            <path>
                                                <groupId>com.google.errorprone</groupId>
                                                <artifactId>error_prone_core</artifactId>
                                                <version>${error_prone.version}</version>
                                            </path>
                                            <path>
                                                <groupId>com.uber.nullaway</groupId>
                                                <artifactId>nullaway</artifactId>
                                                <version>${nullaway.version}</version>
                                            </path>
                                        </annotationProcessorPaths>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-maven-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>prepare-javadoc-main</id>
                                    <goals>
                                        <goal>delombok</goal>
                                    </goals>
                                    <phase>prepare-package</phase>
                                    <configuration>
                                        <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
                                        <outputDirectory>${javadoc.sources.directory}</outputDirectory>
                                        <addOutputDirectory>false</addOutputDirectory>
                                        <formatPreferences>
                                            <javaLangAsFQN>skip</javaLangAsFQN>
                                        </formatPreferences>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
                <plugins>
                    <plugin>
                        <groupId>org.projectlombok</groupId>
                        <artifactId>lombok-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
